src/objects/Contracted_Quote_c_Feed__x.object
<CustomObject>
    <externalDataSource>ALU_Data_Source_New</externalDataSource>
    <externalName>Contracted_Quote_c__Feed</externalName>
    <label>Feed: Surround CQ</label>
    <pluralLabel>Feed: Surround CQ</pluralLabel>
    <fields>
        <fullName>Body__c</fullName>
        <externalDeveloperName>Body</externalDeveloperName>
        <label>Body</label>
        <length>10000</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentCount__c</fullName>
        <externalDeveloperName>CommentCount</externalDeveloperName>
        <label>Comment Count</label>
        <precision>9</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InsertedById__c</fullName>
        <externalDeveloperName>InsertedById</externalDeveloperName>
        <label>InsertedBy ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRichText__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsRichText</externalDeveloperName>
        <label>Is Rich Text</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LikeCount__c</fullName>
        <externalDeveloperName>LikeCount</externalDeveloperName>
        <label>Like Count</label>
        <precision>9</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LinkUrl__c</fullName>
        <externalDeveloperName>LinkUrl</externalDeveloperName>
        <label>Link Url</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NetworkScope__c</fullName>
        <externalDeveloperName>NetworkScope</externalDeveloperName>
        <label>Network Scope</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AllNetworks</fullName>
                    <label>All Networks</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <externalDeveloperName>ParentId</externalDeveloperName>
        <label>Parent ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedRecordId__c</fullName>
        <externalDeveloperName>RelatedRecordId</externalDeveloperName>
        <label>Related Record ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <externalDeveloperName>Title</externalDeveloperName>
        <label>Title</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <externalDeveloperName>Type</externalDeveloperName>
        <label>Feed Item Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TrackedChange</fullName>
                    <label>Tracked Change</label>
                </value>
                <value>
                    <fullName>UserStatus</fullName>
                    <label>User Status</label>
                </value>
                <value>
                    <fullName>TextPost</fullName>
                    <label>Text Post</label>
                </value>
                <value>
                    <fullName>AdvancedTextPost</fullName>
                    <label>Advanced Text Post</label>
                </value>
                <value>
                    <fullName>LinkPost</fullName>
                    <label>Link Post</label>
                </value>
                <value>
                    <fullName>ContentPost</fullName>
                    <label>Content Post</label>
                </value>
                <value>
                    <fullName>PollPost</fullName>
                    <label>Poll</label>
                </value>
                <value>
                    <fullName>RypplePost</fullName>
                    <label>Work.com Thanks</label>
                </value>
                <value>
                    <fullName>ProfileSkillPost</fullName>
                    <label>Profile Skill Post</label>
                </value>
                <value>
                    <fullName>DashboardComponentSnapshot</fullName>
                    <label>Dashboard Component Snapshot</label>
                </value>
                <value>
                    <fullName>ApprovalPost</fullName>
                    <label>Approval Post</label>
                </value>
                <value>
                    <fullName>CaseCommentPost</fullName>
                    <label>Case Comment Feed</label>
                </value>
                <value>
                    <fullName>ReplyPost</fullName>
                    <label>Reply Post</label>
                </value>
                <value>
                    <fullName>EmailMessageEvent</fullName>
                    <label>Email Message Feed</label>
                </value>
                <value>
                    <fullName>CallLogPost</fullName>
                    <label>Call Log Feed</label>
                </value>
                <value>
                    <fullName>ChangeStatusPost</fullName>
                    <label>Change Status Feed</label>
                </value>
                <value>
                    <fullName>AttachArticleEvent</fullName>
                    <label>Attached Article</label>
                </value>
                <value>
                    <fullName>MilestoneEvent</fullName>
                    <label>Milestone Event</label>
                </value>
                <value>
                    <fullName>ActivityEvent</fullName>
                    <label>Activity Change</label>
                </value>
                <value>
                    <fullName>ChatTranscriptPost</fullName>
                    <label>Chat Transcript Post</label>
                </value>
                <value>
                    <fullName>CollaborationGroupCreated</fullName>
                    <label>Collaboration Group Created</label>
                </value>
                <value>
                    <fullName>CollaborationGroupUnarchived</fullName>
                    <label>Collaboration Group Reactivated</label>
                </value>
                <value>
                    <fullName>SocialPost</fullName>
                    <label>Social Post</label>
                </value>
                <value>
                    <fullName>QuestionPost</fullName>
                    <label>Question Post</label>
                </value>
                <value>
                    <fullName>FacebookPost</fullName>
                    <label>Facebook Post</label>
                </value>
                <value>
                    <fullName>BasicTemplateFeedItem</fullName>
                    <label>Basic Template Post</label>
                </value>
                <value>
                    <fullName>CreateRecordEvent</fullName>
                    <label>Created Record</label>
                </value>
                <value>
                    <fullName>CanvasPost</fullName>
                    <label>Canvas</label>
                </value>
                <value>
                    <fullName>AnnouncementPost</fullName>
                    <label>a</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <externalDeveloperName>Visibility</externalDeveloperName>
        <label>Visibility</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AllUsers</fullName>
                    <label>All Users</label>
                </value>
                <value>
                    <fullName>InternalUsers</fullName>
                    <label>Internal Users</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>